# seek

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
src/: cli.rs  lib.rs  main.rs
src/matchers/: mod.rs
src/search/: mod.rs
src/ui/: mod.rs
